Add animation using LVGL
* Integrate the LVGL library
* Add demo display using LVGL animation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/RTT"]
 	path = src/RTT
 	url = https://github.com/SEGGERMicro/RTT.git
+[submodule "vendor/lvgl"]
+	path = vendor/lvgl
+	url = https://github.com/lvgl/lvgl.git
